# Diffusion-Speech-Tokenizer

./: .gitignore  README.md  env.sh  pyproject.toml  requirements.txt  setup.py  test_auto_download.py
config/: tts.json
models/codec/amphion_codec/: codec.py  vocos.py
models/codec/amphion_codec/quantize/: __init__.py  lookup_free_quantize.py  residual_vq.py
models/tts/llm_tts/: inference_llm_tts.py  inference_mgm_tts.py  llama_nar_prefix.py  mgm.py
models/tts/tadicodec/: infer_utils.py  inference_tadicodec.py  llama_nar_prefix.py  modeling_tadicodec.py
tadicodec/models/codec/amphion_codec/: codec.py  vocos.py
tadicodec/models/codec/amphion_codec/quantize/: __init__.py  residual_vq.py
tadicodec/models/codec/melvqgan/: melspec.py
tadicodec/models/tts/llm_tts/: chat_template.py  inference_llm_tts.py  inference_mgm_tts.py  mgm.py
tadicodec/models/tts/tadicodec/: infer_utils.py  inference_tadicodec.py  llama_nar_prefix.py  modeling_tadicodec.py
tadicodec/utils/: util.py
use_examples/: test_auto_download.py  test_llm_tts.py  test_mgm_tts.py  test_rec.py
utils/: util.py
